# streamcontext

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  audit-v0.1.md  audit-v0.2.md  audit-v0.3.md  catalog.md  data-handling.md  demo-script.md  example-conversations.md  mcp-setup.md  observability.md  security.md
docs/blog/: why-kafka-needs-a-semantic-catalog.md
examples/: producer.py  query.py
schemas/: order.avsc
streamcontext/: __init__.py  config.py  connections.py  consumer.py  embedder.py  errors.py  logging.py  main.py  mcp_catalog.py  mcp_main.py  mcp_models.py  mcp_search.py  mcp_server.py  metrics.py  observability.py  pipeline.py  rate_limit.py  redaction.py  sink.py  types.py
streamcontext/catalog/: __init__.py  activity.py  builder.py  inference.py  introspect.py  metrics.py  models.py  privacy.py  refresher.py  relationships.py  store.py
tests/: test_catalog.py  test_catalog_inference.py  test_catalog_privacy.py  test_catalog_relationships.py  test_hardening.py  test_mcp_authorization.py  test_mcp_catalog.py  test_mcp_search.py  test_observability.py  test_pipeline.py  test_security.py
