[project]
name = "streamcontext"
version = "0.3.0"
description = "The semantic gateway between Kafka and AI agents. Self-describing event streams, queryable by agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jagadesh Varma Nadimpalli" },
]
keywords = ["kafka", "mcp", "llm", "vector-database", "embeddings", "streaming", "rag", "ai-infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "aiokafka>=0.11.0",
    "confluent-kafka[avro,schemaregistry]>=2.5.0",
    "fastavro>=1.9.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "qdrant-client>=1.10.0",
    "sentence-transformers>=3.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.5.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
openai = ["openai>=1.40.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers[kafka]>=4.7.0",
    "ruff>=0.15.0",
    "mypy>=1.11.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
streamcontext = "streamcontext.main:run"
streamcontext-mcp = "streamcontext.mcp_main:run"

[project.urls]
Homepage = "https://github.com/jagguvarma15/streamcontext"
Repository = "https://github.com/jagguvarma15/streamcontext"
Issues = "https://github.com/jagguvarma15/streamcontext/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streamcontext"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["streamcontext"]
ignore_missing_imports = true
warn_redundant_casts = true

# These libraries ship py.typed but their stubs are large and version-sensitive
# (numpy/torch use 3.12+ syntax) or do not match the thin runtime protocols we
# pass them through (qdrant_client). We check our own code at the call boundary
# via the typed protocols in mcp_search.py; analysing the libraries themselves
# adds noise without catching bugs in our code.
[[tool.mypy.overrides]]
module = ["qdrant_client.*", "numpy.*", "sentence_transformers.*"]
follow_imports = "skip"
ignore_missing_imports = true
